# drivingml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  latest_model.pt  model_ep_2279.pt
lib/mana/: CMakeLists.txt
lib/mana/assets/models/cube/: cube.blend  cube.blend1  cube.dae
lib/mana/assets/shaders/glsl/: atmosphericscattering.frag  atmosphericscattering.vert  blit.frag  dualcontouring.frag  dualcontouring.vert  fxaa.frag  manifolddualcontouring.frag  manifolddualcontouring.vert  model.frag  model.vert  modelcommon.glsl  modelflat.frag  modelpalette.frag  modelstatic.vert  screenspace.vert  sprite.frag  sprite.vert  spriteanimation.frag  spriteanimation.vert  water.frag  water.vert
lib/mana/assets/shaders/glsl/grass/: grass.frag  grass.vert  grassvert.comp
lib/mana/assets/shaders/glsl/resolve/: resolve2.frag  resolve3.frag  resolve4.frag
lib/mana/assets/shaders/glsl/ssao/: ssao.frag
lib/mana/assets/shaders/hlsl/: blit.hlsl  model.hlsl  modelcommon.hlsl  modelstatic.hlsl  screenspace.hlsl  sprite.hlsl  spriteanimation.hlsl  water.hlsl
lib/mana/assets/shaders/hlsl/resolve/: resolve2.hlsl  resolve3.hlsl  resolve4.hlsl
lib/mana/assets/shaders/spirv/: atmosphericscattering.frag.spv  atmosphericscattering.vert.spv  blit.frag.spv  dualcontouring.frag.spv  dualcontouring.vert.spv  fxaa.frag.spv  manifolddualcontouring.frag.spv  manifolddualcontouring.vert.spv  model.vert.spv  modelflat.frag.spv  modelpalette.frag.spv  modelstatic.vert.spv  screenspace.vert.spv  sprite.frag.spv  sprite.vert.spv  spriteanimation.frag.spv  spriteanimation.vert.spv  water.frag.spv  water.vert.spv
lib/mana/assets/shaders/spirv/grass/: grass.frag.spv  grass.vert.spv  grassvert.comp.spv
lib/mana/assets/shaders/spirv/resolve/: resolve2.frag.spv  resolve3.frag.spv  resolve4.frag.spv
lib/mana/assets/shaders/spirv/ssao/: blur.frag.spv  composition.frag.spv  ssao.frag.spv
lib/mana/include/mana/: mana.h
lib/mana/include/mana/audio/: audio.h
lib/mana/include/mana/core/: corecommon.h
lib/mana/include/mana/core/audio/: audio.h
lib/mana/include/mana/core/graphics/: graphicscommon.h
lib/mana/include/mana/core/graphics/apis/: api.h  apicommon.h  apidirectx12.h  apivulkan.h
lib/mana/include/mana/core/graphics/render/: surface.h  window.h
lib/mana/include/mana/core/graphics/shaders/: blitshader.h  modelshader.h  modelstaticshader.h  resolveshader.h  shader.h  shadercommon.h  shaderdirectx12.h  shadervulkan.h  spriteshader.h  watershader.h
lib/mana/include/mana/core/graphics/utilities/: camera.h  gltf.h  modelcache.h  text.h
lib/mana/include/mana/core/input/: inputmanager.h
lib/mana/include/mana/core/input/controllers/: controller.h  controllercommon.h  gamecubecontroller.h  joystickcontroller.h  keyboardmousecontroller.h  playstationcontroller.h  xboxcontroller.h
lib/mana/include/mana/core/math/: advmath.h  half.h  ivec3.h  mat3.h  mat3d.h  mat4.h  mat4d.h  quat.h  quatd.h  real32.h  real64.h  vec2.h  vec3.h  vec3d.h  vec4.h  vec4d.h
lib/mana/include/mana/core/network/: socket.h
lib/mana/include/mana/core/noise/: ctfetables.h  noise.h  noisecommon.h  perlinnoise.h  ridgedfractalnoise.h  spherenoise.h  voronoinoise.h
lib/mana/include/mana/core/physics/: shape.h
lib/mana/include/mana/core/storage/: arraylist.h  map.h  priorityqueue.h  queue.h  singlylist.h  stack.h  storage.h  vector.h
lib/mana/include/mana/core/threads/: threads.h
lib/mana/include/mana/core/utilities/: fileio.h  xmlparser.h  zlib.h
lib/mana/include/mana/graphics/: graphicscommon.h
lib/mana/include/mana/graphics/apis/: api.h  apicommon.h  apidirectx12.h  apivulkan.h
lib/mana/include/mana/graphics/entities/dualcontouring/: manifolddualcontouring.h  manifoldtables.h  qef.h
lib/mana/include/mana/graphics/entities/model/: model.h  modelcommon.h  modeldirectx12.h  modelvulkan.h
lib/mana/include/mana/graphics/entities/sprite/: sprite.h  spriteanimation.h  spriteanimationcommon.h  spriteanimationdirectx12.h  spriteanimationvulkan.h  spritecommon.h  spritedirectx12.h  spritevulkan.h
lib/mana/include/mana/graphics/entities/water/: water.h  watercommon.h  waterdirectx12.h  watervulkan.h
lib/mana/include/mana/graphics/render/: surface.h  window.h
lib/mana/include/mana/graphics/render/gbuffer/: gbuffer.h  (+3 more)
lib/mana/include/mana/graphics/shaders/: blitshader.h  modelshader.h  modelstaticshader.h  resolveshader.h  shader.h  shadercommon.h  shaderdirectx12.h  shadervulkan.h  spriteanimationshader.h  spriteshader.h  watershader.h
lib/mana/include/mana/graphics/utilities/: camera.h  gltf.h  modelcache.h  text.h
lib/mana/include/mana/math/: advmath.h  half.h  ivec3.h  mat3.h  mat3d.h  mat4.h  mat4d.h  quat.h  quatd.h  vec2.h  vec3.h  vec3d.h  vec4.h  vec4d.h
lib/mana/include/mana/network/: socket.h
lib/mana/include/mana/noise/: billownoise.h  ctfetables.h  noise.h  noisecommon.h  perlinnoise.h  randomvectors.h  ridgedfractalnoise.h  spherenoise.h  voronoinoise.h
lib/mana/include/mana/physics/: body.h  chaos.h  shape.h
lib/mana/include/mana/storage/: arraylist.h  map.h  priorityqueue.h  queue.h  singlylist.h  stack.h  storage.h  vector.h
lib/mana/include/mana/utilities/: fileio.h  jsmn.h  jsonparser.h  stb_truetype.h  xmlparser.h  zlib.h
lib/mana/src/mana/: mana.c
lib/mana/src/mana/audio/: audio.c
lib/mana/src/mana/core/: corecommon.c
lib/mana/src/mana/core/audio/: audio.c
lib/mana/src/mana/core/input/: inputmanager.c
lib/mana/src/mana/core/math/: advmath.c  half.c  ivec3.c  mat3.c  mat3d.c  mat4.c  mat4d.c  quat.c  quat4d.c  real16.c  real32.c  real64.c  vec2.c  vec3.c  vec3d.c  vec4.c  vec4d.c
lib/mana/src/mana/core/threads/: threads.c
lib/mana/src/mana/graphics/apis/: api.c  apidirectx12.c  apivulkan.c
lib/mana/src/mana/graphics/render/: window.c
lib/mana/src/mana/graphics/shaders/: blitshader.c  modelshader.c  modelstaticshader.c  resolveshader.c  shader.c  shaderdirectx12.c  shadervulkan.c  spriteanimationshader.c  spriteshader.c  watershader.c
lib/mana/src/mana/graphics/utilities/: camera.c  gltf.c  modelcache.c
lib/mana/src/mana/threads/: threads.c
(+256 files in other folders)
